--- a/testSpring1/src/main/resources/templates/user.html
+++ b/testSpring1/src/main/resources/templates/user.html
@@ -12,6 +12,7 @@
                 <th>USER ID</th>
                 <th>BOOK ID</th>
                 <th>BOOK NAME</th>
+                <th>編集</th>
                 <th>削除</th>
             </tr>
         </thead>
@@ -20,6 +21,16 @@
                 <td class="center" th:text="${book.user_id}"></td>
                 <td th:text="${book.book_id}"></td>
                 <td th:text="*{book.book_name}"></td>
+                <td>
+                	<form th:action="@{/edit}" th:object="${bookSearchRequest}" th:method="post">
+				        <div>
+				        	<input type="hidden" name="user_id" th:value="${book.user_id}" />
+				        	<input type="hidden" name="book_id" th:value="${book.book_id}" />
+				        	<input type="hidden" name="book_id" th:value="${book.book_name}" />
+				            <input type="submit" value="編集"  />
+				        </div>
+				    </form>
+                </td>
                 <td>
                 	<form th:action="@{/delete}" th:object="${bookSearchRequest}" th:method="post">
 				        <div>
