--- a/testSpring1/src/main/resources/templates/user.html
+++ b/testSpring1/src/main/resources/templates/user.html
@@ -26,7 +26,7 @@
 				        <div>
 				        	<input type="hidden" name="user_id" th:value="${book.user_id}" />
 				        	<input type="hidden" name="book_id" th:value="${book.book_id}" />
-				        	<input type="hidden" name="book_id" th:value="${book.book_name}" />
+				        	<input type="hidden" name="book_name" th:value="${book.book_name}" />
 				            <input type="submit" value="編集"  />
 				        </div>
 				    </form>
