--- a/testSpring1/src/main/resources/templates/edit.html
+++ b/testSpring1/src/main/resources/templates/edit.html
@@ -21,8 +21,8 @@
                 <td th:text="*{book_id}"></td>
                 <td th:text="*{book_name}"></td>
                 <form th:action="@{/edit_confirm}" th:object="${bookSearchRequest}" th:method="post">
-			            ID：<input type="text" name="book_name" />
-			            <input type="hidden" name="user_id "th:value="*{user_id}" />
+			            NAME：<input type="text" name="book_name" />
+			            <input type="hidden" name="user_id" th:value="*{user_id}" />
 			            <input type="hidden" name="book_id" th:value="*{book_id}" />
 			            <input type="submit" value="編集" />
 			    </form>
